--- a/login.html
+++ b/login.html
@@ -11,42 +11,48 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
     <div class="container-login">
-        <form action="" method="post">
-            <img src="./view/img/chat.png" alt="realtime chat logo">
-            <div class="box-input">
-                <label for="email">
-                    Email Address
-                </label>
-                <div>
-                    <i class="fa-solid fa-envelope"></i>
-                    <input id="email" name="email" type="text" placeholder="example@gmail.com" required>
+        <div class="wrapper">
+            <form action="" method="post">
+                <img src="./view/img/chat.png" alt="realtime chat logo">
+                <div class="box-input">
+                    <label for="email">
+                        Email Address
+                    </label>
+                    <div>
+                        <i class="fa-solid fa-envelope"></i>
+                        <input tabindex="1" id="email" name="email" type="text" placeholder="example" required>
+                        <p>@gmail.com</p>
+                    </div>
                 </div>
-            </div>
-            <div class="box-input">
-                <label for="password">
-                    Password
-                </label>
-                <div>
-                    <i class="fa-solid fa-lock"></i>
-                    <input id="password" name="password" type="password" placeholder="••••••" required>
+                <div class="box-input">
+                    <label for="password">
+                        Password
+                    </label>
+                    <div>
+                        <i class="fa-solid fa-lock"></i>
+                        <input tabindex="2" id="password" name="password" type="password" placeholder="••••••" required>
+                        <i class="fa-solid fa-eye" tabindex="3"></i>
+                    </div>
                 </div>
-            </div>
-            <button type="submit">
-                Login
-            </button>
-            <div class="option">
-                <a href="./register.html">Sign up</a>
-                <a href="">Forgot Password?</a>
-            </div>
-        </form>
+                <button tabindex="4" type="submit">
+                    Login
+                </button>
+                <div class="option">
+                    <a tabindex="5" href="./register.html">Sign up</a>
+                    <a tabindex="6" href="">Forgot Password?</a>
+                </div>
+            </form>
+        </div>
     </div>
+    <script src="./asset/js/actionPassword.js"></script>
 </body>
 
 </html>
