--- a/register.html
+++ b/register.html
@@ -11,54 +11,62 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <body>
     <div class="container-register">
-        <form action="" method="post">
-            <img src="./view/img/chat.png" alt="realtime chat logo">
-            <div class="box-input">
-                <label for="fullname">
-                    Full Name
-                </label>
-                <div>
-                    <i class="fa-solid fa-user"></i>
-                    <input id="fullname" name="fullname" type="text" placeholder="Nguyen Van A" required>
+        <div class="wrapper">
+            <form action="" method="post">
+                <img src="./view/img/chat.png" alt="realtime chat logo">
+                <div class="box-input">
+                    <label for="fullname">
+                        Full Name
+                    </label>
+                    <div>
+                        <i class="fa-solid fa-user"></i>
+                        <input tabindex="1" id="fullname" name="fullname" type="text" placeholder="Nguyen Van A" required>
+                    </div>
                 </div>
-            </div>
-            <div class="box-input">
-                <label for="email">
-                    Email Address
-                </label>
-                <div>
-                    <i class="fa-solid fa-envelope"></i>
-                    <input id="email" name="email" type="text" placeholder="example@gmail.com" required>
+                <div class="box-input">
+                    <label for="email">
+                        Email Address
+                    </label>
+                    <div>
+                        <i class="fa-solid fa-envelope"></i>
+                        <input tabindex="2" id="email" name="email" type="text" placeholder="example@gmail.com" required>
+                    </div>
                 </div>
-            </div>
-            <div class="box-input">
-                <label for="password">
-                    Password
-                </label>
-                <div>
-                    <i class="fa-solid fa-lock"></i>
-                    <input id="password" name="password" type="password" placeholder="Password" required>
+                <div class="box-input">
+                    <label for="password">
+                        Password
+                    </label>
+                    <div>
+                        <i class="fa-solid fa-lock"></i>
+                        <input tabindex="3" id="password" name="password" type="password" placeholder="Password" required>
+                        <i class="fa-solid fa-eye" tabindex="4"></i>
+                        <!-- <button id="action-password" type="button" name="button">
+                        </button> -->
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-lock"></i>
+                        <input tabindex="5" id="repeat-password" name="repeat-password" type="password"
+                            placeholder="Reapet Password" required>
+                        <!-- <i class="fa-solid fa-eye"></i> -->
+                    </div>
                 </div>
-                <div>
-                    <i class="fa-solid fa-lock"></i>
-                    <input id="repeat-password" name="repeat-password" type="repeat-password" placeholder="Reapet Password" required>
+                <button tabindex="6" type="submit">
+                    Register
+                </button>
+                <div class="option">
+                    <a tabindex="7" href="./login.html">Sign in</a>
                 </div>
-            </div>
-            <button type="submit">
-                Register
-            </button>
-            <div class="option">
-                <a href="./login.html">Sign in</a>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
+<section></section>
+    <script src="./asset/js/actionPassword.js"></script>
 </body>
 
 </html>
