--- a/index.html
+++ b/index.html
@@ -122,6 +122,146 @@
                             </div>
                         </div>
                     </div>
+                    <div class="user">
+                        <div class="user-img">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="user-info">
+                            <div class="user-name">Lưu Sỹ Trường</div>
+                            <div class="latest-msg">
+                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
+                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
+                                molestiae, maiores earum nulla ratione?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="user-img">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="user-info">
+                            <div class="user-name">Lưu Sỹ Trường</div>
+                            <div class="latest-msg">
+                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
+                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
+                                molestiae, maiores earum nulla ratione?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="user-img">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="user-info">
+                            <div class="user-name">Lưu Sỹ Trường</div>
+                            <div class="latest-msg">
+                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
+                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
+                                molestiae, maiores earum nulla ratione?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="user-img">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="user-info">
+                            <div class="user-name">Lưu Sỹ Trường</div>
+                            <div class="latest-msg">
+                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
+                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
+                                molestiae, maiores earum nulla ratione?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="user-img">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="user-info">
+                            <div class="user-name">Lưu Sỹ Trường</div>
+                            <div class="latest-msg">
+                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
+                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
+                                molestiae, maiores earum nulla ratione?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="user-img">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="user-info">
+                            <div class="user-name">Lưu Sỹ Trường</div>
+                            <div class="latest-msg">
+                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
+                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
+                                molestiae, maiores earum nulla ratione?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="user-img">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="user-info">
+                            <div class="user-name">Lưu Sỹ Trường</div>
+                            <div class="latest-msg">
+                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
+                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
+                                molestiae, maiores earum nulla ratione?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="user-img">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="user-info">
+                            <div class="user-name">Lưu Sỹ Trường</div>
+                            <div class="latest-msg">
+                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
+                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
+                                molestiae, maiores earum nulla ratione?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="user-img">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="user-info">
+                            <div class="user-name">Lưu Sỹ Trường</div>
+                            <div class="latest-msg">
+                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
+                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
+                                molestiae, maiores earum nulla ratione?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="user-img">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <div class="user-info">
+                            <div class="user-name">Lưu Sỹ Trường</div>
+                            <div class="latest-msg">
+                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
+                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
+                                molestiae, maiores earum nulla ratione?
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -141,13 +281,32 @@
                     </div>
                 </div>
                 <div class="body-chat">
-                    <img src="./view/img/chat.png" alt="" height="300">
-                    <!-- <div class="msg-list">
-                        Chọn một cuộc hội thoại để bắt đầu
-                    </div> -->
+                    <!-- <img src="./view/img/chat.png" alt="" height="300"> -->
+                    <div class="msg-list">
+                        <div class="msg sent">
+                            <div class="msg-content">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nostrum
+                                voluptatibus natus quaerat illo asperiores odit voluptatum nisi earum tenetur vero ea
+                                totam nulla hic dolorum quis id, error omnis.
+                            </div>
+                        </div>
+                        <div class="msg received">
+                            <div class="msg-content">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere quos odio eos
+                                alias rerum doloremque, iusto dolor quam harum, excepturi ipsam quo iste libero id
+                                doloribus in reiciendis? Voluptate.
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="input-area">
-                    <i class="fa-solid fa-plus"></i>
+                    <div id="option">
+                        <i id="button-show" class="fa-solid fa-plus"></i>
+                        <div id="more" class="">
+                            <i class="fa-solid fa-paperclip"></i>
+                            <i class="fa-solid fa-camera"></i>
+                        </div>
+                    </div>
                     <div class="wrapper">
                         <textarea name="input" id="input-area" placeholder="Aa"></textarea>
                     </div>
@@ -161,6 +320,7 @@
 
     <script type="module" src="asset/js/connection.js"></script>
     <script type="module" src="asset/js/messageSent.js"></script>
+    <script src="asset/js/moreOptionChat.js"></script>
 </body>
 
 </html>
