--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 
-<body>
+<body class="dark">
     <div class="container-home">
         <div class="navigation">
             <div class="wrapper">
@@ -39,8 +39,9 @@
             <div class="wrapper-list">
                 <div class="users-list">
                     <div class="user active">
+                        <div class="dot"></div>
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -54,7 +55,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -68,7 +69,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -82,7 +83,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -96,7 +97,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -110,7 +111,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -124,7 +125,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -138,7 +139,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -152,7 +153,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -166,7 +167,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -180,7 +181,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -194,7 +195,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -208,7 +209,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -222,7 +223,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -236,7 +237,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -250,7 +251,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -268,9 +269,10 @@
         <div class="main">
             <div class="wrapper">
                 <div class="title">
+                    <i id="back" class="fa-solid fa-chevron-left"></i>
                     <div class="user">
                         <div class="user-img">
-                            <i class="fa-solid fa-user"></i>
+                            <!-- <i class="fa-solid fa-user"></i> -->
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -318,9 +320,10 @@
         </div>
     </div>
 
-    <script type="module" src="asset/js/connection.js"></script>
-    <script type="module" src="asset/js/messageSent.js"></script>
+    <!-- <script type="module" src="asset/js/connection.js"></script>
+    <script type="module" src="asset/js/messageSent.js"></script> -->
     <script src="asset/js/moreOptionChat.js"></script>
+    <script src="asset/js/userAction.js"></script>
 </body>
 
 </html>
