--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="wrapper">
                 <div class="search-bar">
                     <i id="show-sidebar" class="fa-solid fa-bars"></i>
-                    <input type="text" name="search" id="search" placeholder="Search" />
-                    <i class="fa-solid fa-xmark"></i>
+                    <input type="text" name="search" id="search" placeholder="Tìm kiếm" />
+                    <i id="close-search" class="fa-solid fa-xmark"></i>
                 </div>
                 <div class="tablist">
                     <div class="online-users active">
